--- a/src/app/reports/create-reports/create-reports.component.scss
+++ b/src/app/reports/create-reports/create-reports.component.scss
@@ -1,24 +1,51 @@
+ion-grid {
+  background-color: #F5F5F5;
+
+  .header {
+    padding-left: 15px;
+
+    h1 {
+      font-family: Big John;
+      font-size: 34px
+    }
+  }
+}
+
 .loading {
   font-size: 12px;
   color: #000000;
 }
 
-ion-content {
-  width: 100%;
+.icon {
+  height: 75%
 }
+
 
 ion-card {
   --background: #ffffff;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.230);
+  border-radius: 8px;
 
   div {
     display: flex;
     flex-direction: row
   }
+
+  .card {
+    padding: 10px;
+
+    .process-bar {
+      width: 100%
+    }
+  }
+
+  .card-font {
+    font-size: 14px;
+    color: #000000;
+  }
 }
 
 .img-report {
-
   width: 115px;
   height: 84px;
 
@@ -43,13 +70,6 @@ ion-card {
   }
 }
 
-.segment-button {
-  --border-radius: 50px;
-  font-size: 16px;
-  --background: #ebebeb;
-  --border-color: transparent;
-  --color: #919191
-}
 
 ion-label {
   width: 100%;
@@ -90,21 +110,25 @@ ion-label {
 
 
 .process {
-
   ion-range {
     padding-left: 15px;
     padding-right: 15px;
     --knob-size: 20px;
     --bar-height: 10px;
     --bar-border-radius: 10px;
-
   }
 
   span {
     font-size: 12px;
-    padding-left: 15px
+    padding-left: 15px;
+    color: #707070
   }
 
+  .title {
+    font-size: 16px;
+    font-weight: bold;
+    color: #000000
+  }
 }
 
 
@@ -118,6 +142,37 @@ ion-label {
   }
 }
 
-.item {
-  --border-color: red
+
+
+ion-item {
+  color: #707070;
+  padding-right: 15px;
+  padding-left: 15px;
+
+  ion-textarea,
+  ion-input {
+    --placeholder-color: #707070
+  }
+
+}
+
+
+.segment {
+  ion-row {
+    width: 100%;
+    padding-top: 10px
+  }
+
+  ion-segment {
+    width: 180px;
+    height: 30px;
+
+    .segment-button {
+      --border-radius: 50px;
+      font-size: 16px;
+      --background: #ebebeb;
+      --border-color: transparent;
+      --color: #919191
+    }
+  }
 }
