--- a/src/app/reports/reports.page.scss
+++ b/src/app/reports/reports.page.scss
@@ -2,6 +2,23 @@ ion-item {
   padding: 5px
 }
 
+.header {
+  background-color: #f5f5f5;
+  padding-left: 10px;
+  padding-right: 10px;
+
+  h1 {
+    font-family: Big John;
+    font-size: 34px
+  }
+}
+
+ion-content {
+  --background: #f5f5f5;
+  --padding-start: 5px;
+  --padding-end: 5px
+}
+
 ion-thumbnail {
   // min-width: 7.5rem;
   // min-height: 5.5rem;
@@ -62,13 +79,13 @@ ion-button {
 ion-card {
   background-color: #ffffff;
   box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.230);
-  border-radius: 8px
-}
+  border-radius: 8px;
 
-ion-content {
-  --background: #f5f5f5
-}
+  .card {
+    padding: 10px
+  }
 
-.header {
-  background-color: #f5f5f5
+  .process-bar {
+    width: 100%
+  }
 }
