--- a/src/app/workers/workers.page.scss
+++ b/src/app/workers/workers.page.scss
@@ -4,7 +4,21 @@ ion-item {
 
 .header {
   background-color: #f5f5f5;
+  padding-left: 10px;
+  padding-right: 10px;
+
+  h1 {
+    font-family: Big John;
+    font-size: 34px
+  }
 }
+
+ion-content {
+  --background: #f5f5f5;
+  --padding-start: 5px;
+  --padding-end: 5px
+}
+
 
 ion-thumbnail {
   width: 90.5px;
@@ -68,20 +82,30 @@ ion-fab {
   }
 }
 
-.segment-button {
-  --border-radius: 50px;
-  font-size: 16px;
-  --background: #ebebeb;
-  --border-color: transparent;
-  --color: #919191
+.segment {
+  ion-row {
+    width: 100%;
+    padding-top: 10px
+  }
+
+  ion-segment {
+    width: 180px;
+    height: 30px;
+
+    .segment-button {
+      --border-radius: 50px;
+      font-size: 16px;
+      --background: #ebebeb;
+      --border-color: transparent;
+      --color: #919191
+    }
+  }
+
 }
+
 
 ion-card {
   background-color: #ffffff;
   box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.200);
   border-radius: 8px
-}
-
-ion-content {
-  --background: #f5f5f5
 }
