--- a/src/app/worksites/worksites.page.html
+++ b/src/app/worksites/worksites.page.html
@@ -1,47 +1,60 @@
 <ion-header>
-  <ion-grid>
+  <ion-item lines="none" class="profile">
+    <ion-avatar slot="start">
+      <img src="../../assets/people/worker.jpg" />
+    </ion-avatar>
+    <ion-label>
+      <div>
+        <ion-row>
+          <span class="name">Robert Downey Jr.</span>
+        </ion-row>
+      </div>
+      <div>
+        <ion-row>
+          <span class="content" padding-top>fsdafasdf</span>
+        </ion-row>
+      </div>
+    </ion-label>
+  </ion-item>
+
+  <ion-grid class="title">
     <ion-row>
-      <ion-col>
+      <ion-col style="height: 60px">
         <h1>WORKSITES</h1>
       </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-searchbar></ion-searchbar>
+  <div class="search">
+    <ion-searchbar no-padding></ion-searchbar>
+  </div>
   <div class="main">
     <div class="scroll-main">
       <div>
         <ion-button
-          class="card"
+          class="filter"
           [color]="ionicNamedColor"
-          style="--border-radius: 50px"
           (click)="toggleNamedColor()"
         >
           <span>
             Phnom Penh
           </span>
-          <!-- <ion-label position="fixed">Phnom Penh</ion-label> -->
           <ion-icon name="add-circle" color="light"></ion-icon>
         </ion-button>
       </div>
       <div>
-        <ion-button class="card" color="medium" style="--border-radius: 50px">
-          <!-- Default -->
-          <!-- <ion-label position="fixed">Default</ion-label> -->
+        <ion-button class="filter" color="medium">
           <span>Default</span>
           <ion-icon name="add-circle" color="light"></ion-icon>
         </ion-button>
       </div>
       <div>
-        <ion-button class="card" color="medium" style="--border-radius: 50px">
-          <!-- Default -->
-          <!-- <ion-label position="fixed">Default</ion-label> -->
+        <ion-button class="filter" color="medium">
           <span>Default</span>
           <ion-icon name="add-circle" color="light"></ion-icon>
         </ion-button>
       </div>
       <div>
-        <ion-button class="card" color="medium" style="--border-radius: 50px">
-          <!-- Default -->
+        <ion-button class="filter" color="medium">
           <span>Default</span>
           <ion-icon name="add-circle" color="light"></ion-icon>
         </ion-button>
@@ -52,7 +65,7 @@
 
 <ion-content>
   <ion-card *ngFor="let worksite of worksites">
-    <div style="padding: 10px; overflow: auto">
+    <div class="card">
       <ion-thumbnail slot="start">
         <ion-img *ngIf="worksite.photo" [src]="worksite.photo"></ion-img>
         <ion-img
@@ -61,20 +74,18 @@
         ></ion-img>
       </ion-thumbnail>
       <ion-label>
+        <ion-row>
+          <span margin-left class="card-font">{{ worksite.name }}</span>
+        </ion-row>
         <div>
           <ion-row>
-            <span margin-left class="card-font">{{ worksite.name }}</span>
-          </ion-row>
-        </div>
-        <div>
-          <ion-row padding-top>
-            <span margin-left class="loading"
+            <span margin-left class="loading" style="height: 25px"
               >Last viewed: {{ worksite.address }}</span
             >
           </ion-row>
         </div>
         <div>
-          <ion-row style="width: 100%" padding-top>
+          <ion-row>
             <ion-progress-bar value="0.25"></ion-progress-bar>
             <span margin-left class="loading">99%</span>
           </ion-row>
