--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -10,7 +10,7 @@
   --ion-color-primary-shade: #e0b500;
   --ion-color-primary-tint: #ffd31a;
 
-  --ion-color-secondary: #DDB200;
+  --ion-color-secondary: #f5f5f5;
   --ion-color-secondary-rgb: 221, 178, 0;
   --ion-color-secondary-contrast: #000000;
   --ion-color-secondary-contrast-rgb: 0, 0, 0;
@@ -66,17 +66,9 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 
-  ion-popover {
-    ion-backdrop {
-      opacity: 0.2 !important;
-    }
+}
 
-    .popover-wrapper {
-      .popover-content {
-        width: 80vw;
-        max-width: 500px;
-      }
-    }
-  }
-
+@font-face {
+  font-family: 'Big John';
+  src: url('/assets/fonts/Big\ John/BIG JOHN.otf'); //mine
 }
