--- a/src/app/guard-scanner/guard-scanner.page.html
+++ b/src/app/guard-scanner/guard-scanner.page.html
@@ -1,27 +1,27 @@
 <ion-header>
-  <ion-item lines="none" class="profile">
+  <ion-item lines="none" class="profile" padding-top>
     <ion-avatar slot="start">
       <img src="../../assets/people/worker.jpg" />
     </ion-avatar>
     <ion-label>
       <div>
         <ion-row>
-          <span class="name">Robert Downey Jr.</span>
+          <span class="name">THOR</span>
         </ion-row>
       </div>
       <div>
         <ion-row>
-          <span class="content" padding-top>fsdafasdf</span>
+          <span class="content" padding-top>Guardian of The Building</span>
         </ion-row>
       </div>
     </ion-label>
   </ion-item>
 </ion-header>
 
-<ion-grid class="main">
+<ion-grid class="main" padding-top>
   <ion-row>
     <ion-col>
-      <h1>Avengers HQ</h1>
+      <div class="name">Avengers HQ</div>
       <p class="loading">Last Viewed : July 4th 2019</p>
       <div class="top-img">
         <img src="../../assets/login.png" alt="" style="object-fit: cover" />
