--- a/src/app/guard-scanner/guard-scanner.page.html
+++ b/src/app/guard-scanner/guard-scanner.page.html
@@ -21,7 +21,7 @@
 <ion-grid class="main" padding-top>
   <ion-row>
     <ion-col>
-      <div class="name">Avengers HQ</div>
+      <h1>Avengers HQ</h1>
       <p class="loading">Last Viewed : July 4th 2019</p>
       <div class="top-img">
         <img src="../../assets/login.png" alt="" style="object-fit: cover" />
