--- a/src/global.scss
+++ b/src/global.scss
@@ -1,29 +1,33 @@
 // http://ionicframework.com/docs/theming/
-@import '~@ionic/angular/css/core.css';
-@import '~@ionic/angular/css/normalize.css';
-@import '~@ionic/angular/css/structure.css';
-@import '~@ionic/angular/css/typography.css';
-@import '~@ionic/angular/css/display.css';
-@import '~@ionic/angular/css/padding.css';
-@import '~@ionic/angular/css/float-elements.css';
-@import '~@ionic/angular/css/text-alignment.css';
-@import '~@ionic/angular/css/text-transformation.css';
-@import '~@ionic/angular/css/flex-utils.css';
+@import "~@ionic/angular/css/core.css";
+@import "~@ionic/angular/css/normalize.css";
+@import "~@ionic/angular/css/structure.css";
+@import "~@ionic/angular/css/typography.css";
+@import "~@ionic/angular/css/display.css";
+@import "~@ionic/angular/css/padding.css";
+@import "~@ionic/angular/css/float-elements.css";
+@import "~@ionic/angular/css/text-alignment.css";
+@import "~@ionic/angular/css/text-transformation.css";
+@import "~@ionic/angular/css/flex-utils.css";
 
 ion-popover {
-  ion-backdrop {
-    opacity: 0.2 !important;
-  }
-
-  .popover-wrapper {
-    .popover-content {
-      width: 80vw;
-      max-width: 500px;
+    ion-backdrop {
+        opacity: 0.2 !important;
     }
-  }
+
+    .popover-wrapper {
+        .popover-content {
+            width: 80vw;
+            max-width: 500px;
+        }
+    }
+}
+
+.border-primary {
+    border-radius: 10px;
 }
 
 .searchbar-input {
-  border-radius: 21px !important;
-  border: 1px solid #707070 !important;
+    border-radius: 21px !important;
+    border: 1px solid #707070 !important;
 }
