--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,74 +1,69 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
 
+// bootsrap
+@import "bootstrap";
+
 /** Ionic CSS Variables **/
 :root {
-  --ion-color-primary: #FFCE00;
-  --ion-color-primary-rgb: 255, 206, 0;
-  --ion-color-primary-contrast: #000000;
-  --ion-color-primary-contrast-rgb: 0, 0, 0;
-  --ion-color-primary-shade: #e0b500;
-  --ion-color-primary-tint: #ffd31a;
+    --ion-color-primary: #3069bb;
+    --ion-color-primary-contrast: #000000;
+    --ion-color-primary-contrast-rgb: 0, 0, 0;
 
-  --ion-color-secondary: #f5f5f5;
-  --ion-color-secondary-rgb: 221, 178, 0;
-  --ion-color-secondary-contrast: #000000;
-  --ion-color-secondary-contrast-rgb: 0, 0, 0;
-  --ion-color-secondary-shade: #c29d00;
-  --ion-color-secondary-tint: #e0ba1a;
+    --ion-color-secondary: #172740;
+    --ion-color-secondary-contrast: #000000;
+    --ion-color-secondary-contrast-rgb: 0, 0, 0;
 
-  --ion-color-tertiary: #000000;
-  --ion-color-tertiary-rgb: 0, 0, 0;
-  --ion-color-tertiary-contrast: #ffffff;
-  --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-  --ion-color-tertiary-shade: #000000;
-  --ion-color-tertiary-tint: #1a1a1a;
+    --ion-color-tertiary: #000000;
+    --ion-color-tertiary-rgb: 0, 0, 0;
+    --ion-color-tertiary-contrast: #ffffff;
+    --ion-color-tertiary-contrast-rgb: 255, 255, 255;
+    --ion-color-tertiary-shade: #000000;
+    --ion-color-tertiary-tint: #1a1a1a;
 
-  --ion-color-success: #292929;
-  --ion-color-success-rgb: 41, 41, 41;
-  --ion-color-success-contrast: #ffffff;
-  --ion-color-success-contrast-rgb: 255, 255, 255;
-  --ion-color-success-shade: #242424;
-  --ion-color-success-tint: #3e3e3e;
+    --ion-color-success: #292929;
+    --ion-color-success-rgb: 41, 41, 41;
+    --ion-color-success-contrast: #ffffff;
+    --ion-color-success-contrast-rgb: 255, 255, 255;
+    --ion-color-success-shade: #242424;
+    --ion-color-success-tint: #3e3e3e;
 
-  --ion-color-warning: #FFFFFF;
-  --ion-color-warning-rgb: 255, 255, 255;
-  --ion-color-warning-contrast: #000000;
-  --ion-color-warning-contrast-rgb: 0, 0, 0;
-  --ion-color-warning-shade: #e0e0e0;
-  --ion-color-warning-tint: #ffffff;
+    --ion-color-warning: #ffffff;
+    --ion-color-warning-rgb: 255, 255, 255;
+    --ion-color-warning-contrast: #000000;
+    --ion-color-warning-contrast-rgb: 0, 0, 0;
+    --ion-color-warning-shade: #e0e0e0;
+    --ion-color-warning-tint: #ffffff;
 
-  --ion-color-danger: #B51717;
-  --ion-color-danger-rgb: 181, 23, 23;
-  --ion-color-danger-contrast: #ffffff;
-  --ion-color-danger-contrast-rgb: 255, 255, 255;
-  --ion-color-danger-shade: #9f1414;
-  --ion-color-danger-tint: #bc2e2e;
+    --ion-color-danger: #b51717;
+    --ion-color-danger-rgb: 181, 23, 23;
+    --ion-color-danger-contrast: #ffffff;
+    --ion-color-danger-contrast-rgb: 255, 255, 255;
+    --ion-color-danger-shade: #9f1414;
+    --ion-color-danger-tint: #bc2e2e;
 
-  --ion-color-dark: #222428;
-  --ion-color-dark-rgb: 34, 34, 34;
-  --ion-color-dark-contrast: #ffffff;
-  --ion-color-dark-contrast-rgb: 255, 255, 255;
-  --ion-color-dark-shade: #1e2023;
-  --ion-color-dark-tint: #383a3e;
+    --ion-color-dark: #222428;
+    --ion-color-dark-rgb: 34, 34, 34;
+    --ion-color-dark-contrast: #ffffff;
+    --ion-color-dark-contrast-rgb: 255, 255, 255;
+    --ion-color-dark-shade: #1e2023;
+    --ion-color-dark-tint: #383a3e;
 
-  --ion-color-medium: #989aa2;
-  --ion-color-medium-rgb: 152, 154, 162;
-  --ion-color-medium-contrast: #ffffff;
-  --ion-color-medium-contrast-rgb: 255, 255, 255;
-  --ion-color-medium-shade: #86888f;
-  --ion-color-medium-tint: #a2a4ab;
+    --ion-color-medium: #989aa2;
+    --ion-color-medium-rgb: 152, 154, 162;
+    --ion-color-medium-contrast: #ffffff;
+    --ion-color-medium-contrast-rgb: 255, 255, 255;
+    --ion-color-medium-shade: #86888f;
+    --ion-color-medium-tint: #a2a4ab;
 
-  --ion-color-light: #f4f5f8;
-  --ion-color-light-rgb: 244, 244, 244;
-  --ion-color-light-contrast: #000000;
-  --ion-color-light-contrast-rgb: 0, 0, 0;
-  --ion-color-light-shade: #d7d8da;
-  --ion-color-light-tint: #f5f6f9;
-
+    --ion-color-light: #ffffff;
+    --ion-color-light-contrast: #000000;
+    --ion-color-light-contrast-rgb: 0, 0, 0;
+    --ion-color-light-shade: #d7d8da;
+    --ion-color-light-tint: #f5f6f9;
 }
 
 @font-face {
-  font-family: 'Big John';
-  src: url('/assets/fonts/Big\ John/BIG JOHN.otf'); //mine
+    font-family: "Big John";
+    src: url("/assets/fonts/Big\ John/BIG JOHN.otf"); //mine
 }
