remove some unused

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -11,17 +11,16 @@
         <form [formGroup]="loginForm">
             <ion-item class="ion-margin-bottom">
                 <ion-input
-                    type="email"
-                    placeholder="EMAIL ADRESS"
+                    placeholder="Username"
                     padding
                     required
-                    formControlName="email"
+                    formControlName="userName"
                 ></ion-input>
             </ion-item>
             <ion-item>
                 <ion-input
                     type="password"
-                    placeholder="PASSWORD"
+                    placeholder="Password"
                     padding
                     formControlName="password"
                 ></ion-input>
