--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,10 +1,7 @@
 <ion-content center text-center class="background">
     <div class="logo-wrapper">
         <div class="logo">
-            <ion-img
-                class="ion-align-self-end"
-                src="assets/logo/kg-all-logo.png"
-            ></ion-img>
+            <ion-img src="assets/logo/kg-all-logo.png"></ion-img>
         </div>
     </div>
     <div class="form" text-center padding>
