--- a/src/global.scss
+++ b/src/global.scss
@@ -27,6 +27,10 @@ ion-popover {
     border-radius: 10px;
 }
 
+.text-bold {
+    font-weight: bold;
+}
+
 .searchbar-input {
     border-radius: 21px !important;
     border: 1px solid #707070 !important;
