--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,26 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar class="header" color="secondary">
+        <ion-title>
+            <div class="logo-wrapper">
+                <ion-img src="assets/logo/kg-all.png"></ion-img>
+            </div>
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+<ion-content color="primary">
+    <div class="main-section border-primary">
+        <div
+            *ngFor="let btn of btnGroup; let lastIndex = last"
+            class="second-section"
+        >
+            <div [ngClass]="{'border-bottom-0': lastIndex}" class="btn-section">
+                <div class="div-btn" (click)="goToOtherPage($event)">
+                    <ion-label class="text-bold" color="primary"
+                        >{{btn}}</ion-label
+                    >
+                </div>
+            </div>
+        </div>
+    </div>
 </ion-content>
