--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,10 @@
-<!-- <app-menu></app-menu> -->
-
 <ion-header>
-    <ion-toolbar class="header" color="secondary">
-        <ion-title>
-            <div class="logo-wrapper">
-                <ion-img src="assets/logo/kg-all.png"></ion-img>
-            </div>
+    <ion-toolbar color="dark">
+        <ion-title color="light">
+            Home
         </ion-title>
         <ion-buttons slot="start">
-            <ion-menu-button autoHide="false"></ion-menu-button>
+            <ion-menu-button color="light" autoHide="false"></ion-menu-button>
         </ion-buttons>
     </ion-toolbar>
 </ion-header>
