--- a/src/global.scss
+++ b/src/global.scss
@@ -31,6 +31,10 @@ ion-popover {
     font-weight: bold;
 }
 
+.text-center {
+    text-align: center;
+}
+
 .searchbar-input {
     border-radius: 21px !important;
     border: 1px solid #707070 !important;
