--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -11,7 +11,7 @@
     --ion-color-primary-contrast-rgb: 0, 0, 0;
 
     --ion-color-secondary: #172740;
-    --ion-color-secondary-contrast: #000000;
+    --ion-color-secondary-contrast: #ffffff;
     --ion-color-secondary-contrast-rgb: 0, 0, 0;
 
     --ion-color-tertiary: #000000;
@@ -42,7 +42,7 @@
     --ion-color-danger-shade: #9f1414;
     --ion-color-danger-tint: #bc2e2e;
 
-    --ion-color-dark: #222428;
+    --ion-color-dark: #2F3545;
     --ion-color-dark-rgb: 34, 34, 34;
     --ion-color-dark-contrast: #ffffff;
     --ion-color-dark-contrast-rgb: 255, 255, 255;
