--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -1,12 +1,21 @@
 <ion-app>
     <ion-menu contentId="main-content" side="start">
+        <!-- Header  -->
         <ion-header>
-            <ion-toolbar>
-                <ion-title>Menu</ion-title>
-            </ion-toolbar>
+            <ion-row class="title">
+                <ion-col size="3">
+                    <div class="userImage">
+                        <ion-img
+                            src="https://pngimage.net/wp-content/uploads/2018/06/person-png-icon-6.png"
+                        ></ion-img>
+                    </div>
+                </ion-col>
+                <ion-title color="light">Username</ion-title>
+            </ion-row>
         </ion-header>
+        <!-- Content  -->
         <ion-content>
-            <ion-list>
+            <ion-list lines="none">
                 <ion-menu-toggle auto-hide="false" *ngFor="let page of pages">
                     <ion-item
                         [routerLink]="page.path"
@@ -18,6 +27,15 @@
                 </ion-menu-toggle>
             </ion-list>
         </ion-content>
+        <!-- Footer  -->
+        <ion-footer>
+            <ion-toolbar class="text-center">
+                <ion-button (click)="logout()" color="secondary">
+                    <ion-icon name="log-out-outline"></ion-icon>
+                    <ion-label color="light">Logout</ion-label>
+                </ion-button>
+            </ion-toolbar>
+        </ion-footer>
     </ion-menu>
     <ion-router-outlet id="main-content" main></ion-router-outlet>
 </ion-app>
