--- a/src/app/menu/menu.page.scss
+++ b/src/app/menu/menu.page.scss
@@ -1,3 +1,51 @@
-.active-menu {
-    border-left: 5px solid var(--ion-color-danger);
+ion-menu {
+    --ion-background-color: var(--ion-color-secondary);
+    --ion-text-color: var(--ion-color-secondary-contrast);
+
+    ion-header {
+        height: 100px;
+        border-bottom: 1px solid var(--ion-color-light);
+        vertical-align: middle;
+
+        .title {
+            width: 100%;
+            height: fit-content;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+
+            .userImage {
+                width: 63px;
+
+                ion-img {
+                    object-fit: cover;
+                }
+            }
+
+            ion-title {
+                font-size: 18px;
+            }
+        }
+    }
+}
+
+ion-content {
+    ion-list {
+        padding-left: 20px;
+
+        ion-item {
+            font-size: 15px;
+        }
+    }
+}
+
+ion-footer {
+    ion-title {
+        font-size: 15px;
+    }
+
+    ion-button {
+        --box-shadow: none;
+    }
 }
