--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -39,7 +39,7 @@
     </ion-menu>
     <ion-router-outlet id="main-content" main>
         <ion-header>
-            <ion-toolbar color="dark">
+            <ion-toolbar color="primary">
                 <ion-title color="light">
                     Home
                 </ion-title>
@@ -52,7 +52,7 @@
             </ion-toolbar>
         </ion-header>
 
-        <ion-content color="primary">
+        <ion-content color="light">
             <div class="main-section border-primary">
                 <div
                     *ngFor="let btn of btnGroup; let lastIndex = last"
@@ -63,7 +63,7 @@
                         class="btn-section"
                     >
                         <div class="div-btn" (click)="goToOtherPage($event)">
-                            <ion-label class="text-bold" color="primary"
+                            <ion-label class="text-bold" color="light"
                                 >{{btn}}</ion-label
                             >
                         </div>
