--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,7 @@
                         ></ion-img>
                     </div>
                 </ion-col>
-                <ion-title color="light">Username</ion-title>
+                <ion-title color="light">{{ user.userName }}</ion-title>
             </ion-row>
         </ion-header>
         <!-- Content  -->
