--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -71,7 +71,11 @@ ion-menu {
             }
 
             ion-title {
-                font-size: 18px;
+                font-size: 16px;
+            }
+
+            .titleInKhmer {
+                font-size: 14px;
             }
         }
     }
