--- a/src/app/pages/general/general.page.html
+++ b/src/app/pages/general/general.page.html
@@ -1,9 +1,16 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>general</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-tabs>
 
-<ion-content>
+  <ion-tab-bar slot="bottom" color="primary">
+    <ion-tab-button tab="moc">
+      <ion-icon name="home"></ion-icon>
+      <ion-label>Moc</ion-label>
+    </ion-tab-button>
 
-</ion-content>
+    <ion-tab-button tab="tab2">
+      <ion-icon name="apps"></ion-icon>
+      <ion-label>Gdont</ion-label>
+    </ion-tab-button>
+
+  </ion-tab-bar>
+
+</ion-tabs>
