--- a/src/app/pages/general/moc/moc.page.html
+++ b/src/app/pages/general/moc/moc.page.html
@@ -1,9 +1,14 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>moc</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-icon
+                size="large"
+                color="light"
+                name="arrow-back-outline"
+            ></ion-icon>
+        </ion-buttons>
+        <ion-title color="light">Moc</ion-title>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
-</ion-content>
+<ion-content> </ion-content>
