--- a/src/global.scss
+++ b/src/global.scss
@@ -1,27 +1,43 @@
-// http://ionicframework.com/docs/theming/
+/*
+ * App Global CSS
+ * ----------------------------------------------------------------------------
+ * Put style rules here that you want to apply globally. These styles are for
+ * the entire app and not just one component. Additionally, this file can be
+ * used as an entry point to import other CSS/Sass files to be included in the
+ * output CSS.
+ * For more information on global stylesheets, visit the documentation:
+ * https://ionicframework.com/docs/layout/global-stylesheets
+ */
+
+/* Core CSS required for Ionic components to work properly */
 @import "~@ionic/angular/css/core.css";
+
+/* Basic CSS for apps built with Ionic */
 @import "~@ionic/angular/css/normalize.css";
 @import "~@ionic/angular/css/structure.css";
 @import "~@ionic/angular/css/typography.css";
-@import "~@ionic/angular/css/display.css";
+@import '~@ionic/angular/css/display.css';
+
+/* Optional CSS utils that can be commented out */
 @import "~@ionic/angular/css/padding.css";
 @import "~@ionic/angular/css/float-elements.css";
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
-ion-popover {
-    ion-backdrop {
-        opacity: 0.2 !important;
-    }
 
-    .popover-wrapper {
-        .popover-content {
-            width: 80vw;
-            max-width: 500px;
-        }
-    }
-}
+// ion-popover {
+//     ion-backdrop {
+//         opacity: 0.2 !important;
+//     }
+
+//     .popover-wrapper {
+//         .popover-content {
+//             width: 80vw;
+//             max-width: 500px;
+//         }
+//     }
+// }
 
 .border-primary {
     border-radius: 10px;
@@ -29,10 +45,6 @@ ion-popover {
 
 .text-bold {
     font-weight: bold;
-}
-
-.text-center {
-    text-align: center;
 }
 
 .searchbar-input {
