yoo more change

--- a/src/app/pages/general/general.page.html
+++ b/src/app/pages/general/general.page.html
@@ -1,9 +1,10 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom" color="primary">
+  <ion-tab-bar slot="bottom">
+
     <ion-tab-button tab="moc">
       <ion-icon name="home"></ion-icon>
-      <ion-label>Moc</ion-label>
+      <ion-label >Moc</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tax">
