--- a/src/app/pages/general/tax-tap/tax-tap.page.html
+++ b/src/app/pages/general/tax-tap/tax-tap.page.html
@@ -1,9 +1,18 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>taxTap</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-buttons
+            (click)="backHome()"
+            class="ion-padding-start"
+            slot="start"
+        >
+            <ion-icon
+                size="large"
+                color="light"
+                name="arrow-back-outline"
+            ></ion-icon>
+        </ion-buttons>
+        <ion-title color="light">Tax</ion-title>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
-</ion-content>
+<ion-content> </ion-content>
