--- a/src/app/pages/general/general.page.html
+++ b/src/app/pages/general/general.page.html
@@ -3,13 +3,14 @@
   <ion-tab-bar slot="bottom">
 
     <ion-tab-button tab="moc">
-      <ion-icon name="home"></ion-icon>
+      <!-- <ion-icon name="home"></ion-icon> -->
+      <ion-icon name="business"></ion-icon>
       <ion-label >Moc</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tax">
-      <ion-icon name="apps"></ion-icon>
-      <ion-label>Gdont</ion-label>
+      <ion-icon name="newspaper"></ion-icon>
+      <ion-label>Gdt</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
