--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -53,6 +53,7 @@ ion-menu {
         height: 100px;
         border-bottom: 1px solid var(--ion-color-light);
         vertical-align: middle;
+        border-bottom-right-radius: 10px;
 
         .title {
             width: 100%;
