--- a/src/app/pages/general/moc/moc.page.html
+++ b/src/app/pages/general/moc/moc.page.html
@@ -7,7 +7,7 @@
                 name="arrow-back-outline"
             ></ion-icon>
         </ion-buttons>
-        <ion-title color="light">Moc</ion-title>
+        <ion-title color="light">Ministry of Commerce</ion-title>
     </ion-toolbar>
 </ion-header>
 
