--- a/src/app/pages/general/tax-tap/tax-tap.page.html
+++ b/src/app/pages/general/tax-tap/tax-tap.page.html
@@ -11,7 +11,7 @@
                 name="arrow-back-outline"
             ></ion-icon>
         </ion-buttons>
-        <ion-title color="light">Tax</ion-title>
+        <ion-title color="light">General Department of Taxation</ion-title>
     </ion-toolbar>
 </ion-header>
 
