--- a/src/global.scss
+++ b/src/global.scss
@@ -51,3 +51,24 @@
     border-radius: 21px !important;
     border: 1px solid #707070 !important;
 }
+
+ion-title {
+    font-size: 16px;
+}
+
+ion-toolbar {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+ion-header {
+    z-index: 0;
+    ion-popover { 
+        --box-shadow: 5px 10px;
+    }
+}
+
+ion-tab-bar {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
