--- a/src/app/pages/general/general.page.html
+++ b/src/app/pages/general/general.page.html
@@ -5,12 +5,12 @@
     <ion-tab-button tab="moc">
       <!-- <ion-icon name="home"></ion-icon> -->
       <ion-icon name="business"></ion-icon>
-      <ion-label >Moc</ion-label>
+      <ion-label >MOC</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tax">
       <ion-icon name="newspaper"></ion-icon>
-      <ion-label>Gdt</ion-label>
+      <ion-label>GDT</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
